--- a/CLUI/UnifiedIndex-F.html
+++ b/CLUI/UnifiedIndex-F.html
@@ -61,6 +61,7 @@ add to GL: unity, {<tt>ROB4</tt>: <a href= "../Baha'i/Others/ROB/V4/p190-204Ch13
 		height: auto;
 		border: none;
 	}
+
 	
 	.styleDivExpanded{
 		height: auto;
@@ -261,8 +262,9 @@ Key:<p>
 	<a href="../Baha'i/Baha/GL/p003-346.html#CXLVII" style="color:#915104;"><i>Lawh-i-Laylatu'l-Quds</i></a><a name="GLLawh-i-Laylatu'l-Quds"></a> (Tablet of the Holy Night), {<tt>ROB2</tt>: <a href= "../Baha'i/Others/ROB/V2/p152-170Ch07.html#p164">164</a>, <a href= "../Baha'i/Others/ROB/V2/p171-193Ch08.html#p188">188</a>-90; quoted <a href= "../Baha'i/Others/ROB/V2/p171-193Ch08.html#p188">188</a>-9}<br>
 	<a href="../Baha'i/Baha/GL/p003-346.html#CVI" style="color:#915104;"><i>Lawh-i-Mánikchí Sáhib</i></a><a name="GLLawh-i-MánikchíSáhib"></a>,
 		<blockquote>
-		{<tt>ROB3</tt>: <a href= "../Baha'i/Others/ROB/V3/p253-274Ch12.html#p270">270</a>-71; quoted, <a href= "../Baha'i/Others/ROB/V3/p253-274Ch12.html#p271">271</a>}<br>
-		Mánikchí Sáhib<a name="MánikchíSáhib"></a>, recipient of {<tt>ROB3</tt>: <a href= "../Baha'i/Others/ROB/V3/p253-274Ch12.html#p269">269</a>-70}<br>
+		{<tt>ROB3</tt>: <a href= "../Baha'i/Others/ROB/V3/p253-274Ch12.html#p270"><b>270</a>-71</b>; quoted, <a href= "../Baha'i/Others/ROB/V3/p253-274Ch12.html#p271">271</a>}<br>
+         'Ye are the fruits of one tree and the leaves of one branch', {<tt>ESW</tt>: <a href="../Baha'i/Baha/EW/p001-182.html#para21">14</a>}, {<tt>GL</tt>: <a href="../Baha'i/Baha/GL/p003-346.html#para440">218</a>, <a href="../Baha'i/Baha/GL/p003-346.html#para590">288</a>}, {<tt>ROB3</tt>: <a href= "../Baha'i/Others/ROB/V3/p253-274Ch12.html#p270">270</a>}, {<tt>ROB4</tt>: <a href="../Baha'i/Others/ROB/V4/p190-204Ch13.html#p196">196</a>, <a href="../Baha'i/Others/ROB/V4/p368-390Ch24.html#p375">375</a>}, {<tt>TOB</tt>: <a href="../Baha'i/Baha/TOB/p001-270TOB.html#para359">127</a>, <a href="../Baha'i/Baha/TOB/p001-270TOB.html#para469">164</a>}<br>
+        Mánikchí Sáhib<a name="MánikchíSáhib"></a>, recipient of {<tt>ROB3</tt>: <a href= "../Baha'i/Others/ROB/V3/p253-274Ch12.html#p269">269</a>-70}<br>
 		</blockquote>
 	<i>Lawh-i-Maqsúd</i>, <i>see</i> <a href="#Lawh-i-Maqsúd"><i>Tablets of Bahá'u'lláh</i></a><br>
 	<i>Lawh-i-Nasír</i><a name="GLLawh-i-Nasír"></a> (Tablet to Nasír) {<tt>GL</tt>: <a href= "../Baha'i/Baha/GL/p003-346.html#LIII" style="color:#915104;">LIII</a>, <a href= "../Baha'i/Baha/GL/p003-346.html#LXXV" style="color:#915104;">LXXV</a>},
@@ -355,7 +357,7 @@ Key:<p>
 		</blockquote>	   
 	<a href="../Baha'i/Baha/GL/p003-346.html#XCIX" style="color:#915104;"><i>Tablet to Hakim</i></a><a name="GLTablettoHakim"></a>,<br>
 	<a href="../Baha'i/Baha/GL/p003-346.html#IX" style="color:#915104;"><i>Tablet to Husayn</i></a><a name="GLTablettoHusayn"></a>,<br>
-	<a href="../Baha'i/Baha/GL/p003-346.html#CIII" style="color:#915104;"><i>Tablet to Javád</i></a><a name="GLTablettoJavád"></a>,<br>
+	<a href="../Baha'i/Baha/GL/p003-346.html#CIII" style="color:#915104;"><i>Tablet to Javád</i></a><a name="GLTablettoJavád"></a>, <a class="xpre-i" href="../CLUG/UnifiedGlossary.html#Javád"><img src="../CLUG/CLUG.jpg" width="10" height="10"></a><br>
 	<a href="../Baha'i/Baha/GL/p003-346.html#CIX" style="color:#915104;"><i>Tablet to Kamál</i></a><a name="GLTablettoKamál"></a>,
 		<blockquote>
 		Hájí Mírzá Kamálu'd-Dín, recipient of, <i>see</i> <a href="#Lawh-i-Kullu't-Ta'ám"><i>Lawh-i-Kullu't-Ta'ám (Tablet of All Food)</i></a><br>
@@ -449,7 +451,7 @@ Key:<p>
 		Writing to defend Cause, {<tt>GL</tt>: <a href= "../Baha'i/Baha/GL/p003-346.html#p330">330</a>}<br>
 		</div>
 		</blockquote>
-    </blockquote> 
+    </blockquote>
 <i>Halih-Halih-Yá-Bishárat</i> (ode), {<tt>ROB1</tt>: <a href="../Baha'i/Others/ROB/V1/p210-220Ch12.html#p211">211</a>, <a href="../Baha'i/Others/ROB/V1/p210-220Ch12.html#p219">219</a>}<br>
 <a href="../Baha'i/Baha/HiddenWords.html" style="color:#915104;"><i>Hidden Words, The</i></a><a name="HiddenWords,The"></a>,
 	<blockquote>
@@ -703,6 +705,7 @@ Key:<p>
 			</blockquote>		
 		Fasting<a name="Fasting"/>, 
 			<blockquote>
+		    {<tt>GL</tt>: <a href="../Baha'i/Baha/GL/p003-346.html#para696">337</a>}<br>
 			{<tt>GPB</tt>: <a href= "../Baha'i/SE/GPB/p087-234SecondPeriod.html#p214">214</a>}<br>
 			{<tt>KA</tt>: <a href= "../Baha'i/Baha/KA/p001-011Intro.html#p4">4</a>, <a href= "../Baha'i/Baha/KA/p012-018Desc.html#p14">14</a>, <a href= "../Baha'i/Baha/KA/p019-088Aqdas.html#para10">K10</a>, <a href= "../Baha'i/Baha/KA/p019-088Aqdas.html#para16">K16</a>, <a href= "../Baha'i/Baha/KA/p141-164Synopsis.html#p148">148</a>-149}<br>
 			{<tt>KI</tt>: <a href="../Baha'i/Baha/KI/p001-094.html#p39">39</a>-40}<br>
@@ -715,7 +718,7 @@ Key:<p>
 			conditions, 
 				<blockquote>
 				{<tt>KA</tt>: <a href= "../Baha'i/Baha/KA/p141-164Synopsis.html#p148">148</a>-149}<br>
-				abstinence from food and drink, 
+				abstinence from food and drink,
 					<blockquote>
 					{<tt>KA</tt>: <a href= "../Baha'i/Baha/KA/p019-088Aqdas.html#para17">K17</a>, <a href= "../Baha'i/Baha/KA/p165-251Notes.html#note25">n25</a>, <a href= "../Baha'i/Baha/KA/p165-251Notes.html#note32">n32</a>}<br>
 					includes smoking, {<tt>KA</tt>: <a href= "../Baha'i/Baha/KA/p165-251Notes.html#note32">n32</a>}<br>
@@ -1607,7 +1610,10 @@ Key:<p>
 	{<tt>ROB4</tt>: <a href= "../Baha'i/Others/ROB/V4/p227-238Ch16.html#p232">232</a>}<br>
 	</blockquote>
 <i>Musíbát-i-Hurúfát-i-'Álíyát</i>, <i>see</i> <a href="#Hurúfát-i-'Állín"><i>Hurúfát-i-'Állín</i></a><br>
-<i>Nafahát-i-Quds</i>, {<tt>ROB4</tt>: <a href="../Baha'i/Others/ROB/V4/p145-160Ch09.html#p159">159</a>}<br>
+<i>Nafahát-i-Quds</i><a name="Nafahát-i-Quds"></a>,
+    <blockquote>
+    God would be pleased if Arabic chosen as Universal Auxiliary Language, {<tt>ROB4</tt>: <a href="../Baha'i/Others/ROB/V4/p145-160Ch09.html#p159">159</a>}<br>
+    </blockquote>
 <i>Nightingale and the Crow, The</i>, {<tt>ROB2</tt>: <a href= "../Baha'i/Others/ROB/V2/p236-269Ch11.html#p241">241</a>-5}<br>
 <a href="../Baha'i/Baha/PM/Cover.html" style="color:#915104;"><i>Prayers and Meditations by Bahá'u'lláh</i></a><a name="PrayersandMeditations"></a>,
 	<blockquote>
@@ -10441,6 +10447,7 @@ Diet, {<tt>ROB3</tt>: <a href= "../Baha'i/Others/ROB/V3/p343-370Ch16.html#p358">
 
 <a class="hh" title="Nineteen eminent Western Bahá'ís, men and women, designated by this title by Shoghi Effendi. They were also entitled 'Heralds of the Covenant'" href="../CLUG/UnifiedGlossary.html#Disciplesof'Abdu'l-Bahá">Disciples of 'Abdu'l-Bahá</a><a name="Disciplesof'Abdu'l-Bahá"></a>, 'Heralds of the Covenant',
 	<blockquote>
+	<div id="resizeablediv">
 	1. Dr. John Ebenezer Esslemont, <i>see</i> <a href="#Esslemont,DrJohnEbenezer">Hands of the Cause of God</a><br>
 	2. Thornton Chase, the first American Bahá'í, <i>see</i> <a href="#AmericaChase,Thornton">America</a><br> 
 	3. Howard MacNutt, {<tt>GPB</tt>: <a href= "../Baha'i/SE/GPB/p235-320ThirdPeriod.html#p257">257</a>}<br> 
@@ -10476,6 +10483,7 @@ Diet, {<tt>ROB3</tt>: <a href= "../Baha'i/Others/ROB/V3/p343-370Ch16.html#p358">
 	17. Arthur P. Dodge, {<tt>GPB</tt>: <a href= "../Baha'i/SE/GPB/p235-320ThirdPeriod.html#p257">257</a>}<br>	
 	18. William H. Hoar, prominent Bahá'í teacher<br>
 	19. Dr. J. G. Augur, pioneer of the Faith in the Pacific Islands<br>
+	</div>
 	</blockquote>
 
 
@@ -13152,7 +13160,7 @@ Language(s)<a name="Language(s)"></a>, Tongues,
 		{<tt>ROB3</tt>: <a href= "../Baha'i/Others/ROB/V3/p147-173Ch08.html#p157">157</a>}<br>
 		{<tt>ROB4</tt>: <a href= "../Baha'i/Others/ROB/V4/p161-167Ch10.html#p162">162</a>, <a href= "../Baha'i/Others/ROB/V4/p214-226Ch15.html#p215">215</a>, <a href= "../Baha'i/Others/ROB/V4/p329-350Ch22.html#p341">341</a>}<br>
 		{<tt>TOB</tt>: <a href= "../Baha'i/Baha/TOB/p001-270TOB.html#p22">22</a>, <a href= "../Baha'i/Baha/TOB/p001-270TOB.html#p68">68</a>, <a href= "../Baha'i/Baha/TOB/p001-270TOB.html#p89">89</a>, <a href= "../Baha'i/Baha/TOB/p001-270TOB.html#p127">127</a>, <a href= "../Baha'i/Baha/TOB/p001-270TOB.html#p165">165</a>-6}<br>
-		God would be pleased if Arabic chosen, {<tt>ROB4</tt>: <a href= "../Baha'i/Others/ROB/V4/p145-160Ch09.html#p160">160</a>}<br>
+		God would be pleased if Arabic chosen, <i>see</i> <a href="#Nafahát-i-Quds"><i>Nafahát-i-Quds</i></a><br>
 		<i>see also:</i> <i>Tablets of Bahá'u'lláh</i> - <a href="#Bishárátonauxiliarylanguage"><i>Bishárát</i></a>, <a href="#Ishráqátonauxiliarylanguage"><i>Ishráqát</i></a>; <a href="#HOJchooseOneLanguage">Bahá'í Faith/House of Justice</a><br>
 		</blockquote>
 	</div>
@@ -14616,7 +14624,7 @@ Mandalay<a name="Mandalay"></a>,
 	Future<a name="Manifestation(s)ofGodfuture"></a>,
 		<blockquote>
 		<div id="resizeablediv">
-		{<tt>GL</tt>: <a href= "../Baha'i/Baha/GL/p003-346.html#p68">68</a>, <a href= "../Baha'i/Baha/GL/p003-346.html#p73">73</a>, <a href= "../Baha'i/Baha/GL/p003-346.html#p346">346</a>}<br>
+		{<tt>GL</tt>: <a href= "../Baha'i/Baha/GL/p003-346.html#p68">68</a>, <a href= "../Baha'i/Baha/GL/p003-346.html#p73">73</a>, <a href= "../Baha'i/Baha/GL/p003-346.html#p244">244</a>, <a href= "../Baha'i/Baha/GL/p003-346.html#p346">346</a>}<br>
 		{<tt>ROB1</tt>: <a href= "../Baha'i/Others/ROB/V1/p257-282Ch16.html#p280">280</a>, <a href= "../Baha'i/Others/ROB/V1/p294-314Ch18.html#p309">309</a>-11}<br>
 		{<tt>ROB3</tt>: <a href= "../Baha'i/Others/ROB/V3/p133-146Ch07.html#p142">142</a> and n.}<br>
 		next, 
@@ -16272,7 +16280,8 @@ Pilate, Pontius, {<tt>TOB</tt>: <a href= "../Baha'i/Baha/TOB/p001-270TOB.html#p1
 	</div>
 	</blockquote>
 Pioneering<a name="Pioneering"></a>, <a class="hh" title="'...any Bahá'í who moves to another area to spread the Faith is a pioneer'" href="../CLUG/UnifiedGlossary.html#Pioneer">Pioneer</a>,
-	<blockquote> 
+	<blockquote>
+    {<tt>GL</tt>: <a href="../Baha'i/Baha/GL/p003-346.html#para687">334</a>}<br>
 	{<tt>ROB4</tt>: <a href= "../Baha'i/Others/ROB/V4/p315-328Ch21.html#p328">328</a>}<br>
 	pioneers of the Faith, {<tt>GPB</tt>: <a href= "../Baha'i/SE/GPB/p235-320ThirdPeriod.html#p261">261</a>, <a href= "../Baha'i/SE/GPB/p321-401FourthPeriod.html#p398">398</a>, <a href= "../Baha'i/SE/GPB/p321-401FourthPeriod.html#p399">399</a>}<br>
 	Shoghi Effendi encourages, {<tt>ROB4</tt>: <a href= "../Baha'i/Others/ROB/V4/p168-176Ch11.html#p171">171</a>-2}<br>
@@ -17112,9 +17121,9 @@ Qum<a name="Qum"></a>,
 				4:45, {<tt>KI</tt>: <a href="../Baha'i/Baha/KI/p001-094.html#para93">86</a>}<br>
 				4:50, {<tt>DBNN</tt>: <a href="../Baha'i/Others/DBNN/p142-169Ch08.html#para26">162</a>}<br>
 				4:80, {<tt>SVFV</tt>: <a href="../Baha'i/Baha/TSVATFV.html#para62">18</a>}<br>
-				4:96 (Rodwell),
+				4:96<a name="Qur'án4:96"></a> (Rodwell),
 					<blockquote>
-					'Say not to every one..."Thou art not a believer."', {<tt>TOB</tt>: <a href="../Baha'i/Baha/TOB/p001-270TOB.html#para576">207</a>}<br>
+					'Say not to every one..."Thou art not a believer."', {<tt>ESW</tt>: <a href="../Baha'i/Baha/EW/p001-182.html#para135">82</a>}, {<tt>GL</tt>: <a href="../Baha'i/Baha/GL/p003-346.html#para454">225</a>}, {<tt>TOB</tt>: <a href="../Baha'i/Baha/TOB/p001-270TOB.html#para576">207</a>}<br>
 					</blockquote>
 				4:129,
 					<blockquote>
@@ -17273,9 +17282,9 @@ Qum<a name="Qum"></a>,
 					<blockquote>
 					<a class="hh" title="A magician employed by Pharaoh as a rival to Moses. According to Muslims, it was he, not Aaron, who made the golden calf" href="../CLUG/UnifiedGlossary.html#Sámirí">Sámirí</a><a name="Sámirí"></a>, {<tt>TOB</tt>: <a href="../Baha'i/Baha/TOB/p001-270TOB.html#para543">190</a>}, {<tt>ROB4</tt>: <a href="../Baha'i/Others/ROB/V4/p205-213Ch14.html#p211">211</a>}<br>
 					</blockquote>
-				20:106 (Rodwell),
+				20:106<a name="Qur'án20:106"></a> (Rodwell),
 					<blockquote>
-					'Thou shall see in it no hollows or rising hills.', {<tt>TOB</tt>: <a href="../Baha'i/Baha/TOB/p001-270TOB.html#para466">162</a>}<br>
+					'Thou shall see in it no hollows or rising hills.', {<tt>GL</tt>: <a href="../Baha'i/Baha/GL/p003-346.html#para531">260</a>}, {<tt>TOB</tt>: <a href="../Baha'i/Baha/TOB/p001-270TOB.html#para466">162</a>}<br>
 					</blockquote>
 				20:107, {<tt>ESW</tt>: <a href="../Baha'i/Baha/EW/Introduction.html#pxvi">xvi</a>}<br>
 				20:110, {<tt>ESW</tt>: <a href="../Baha'i/Baha/EW/Introduction.html#pxvi">xvi</a>}<br>
@@ -17396,9 +17405,9 @@ Qum<a name="Qum"></a>,
 				<blockquote>
 				40:5, {<tt>KI</tt>: <a href="../Baha'i/Baha/KI/p001-094.html#para5">5</a>}<br>
 				40:28, {<tt>KI</tt>: <a href="../Baha'i/Baha/KI/p001-094.html#para13">11</a>}<br>
-				40:29 (Rodwell), 
+				40:29<a name="Qur'án40:29"></a> (Rodwell),
 					<blockquote>
-					'Will ye slay a man...If he be a liar...but if he be a man of truth...', {<tt>TOB</tt>: <a href="../Baha'i/Baha/TOB/p001-270TOB.html#para582">211</a>}<br>
+					'Will ye slay a man...If he be a liar...but if he be a man of truth...', {<tt>GL</tt>: <a href="../Baha'i/Baha/GL/p003-346.html#para444">221</a>}, {<tt>TOB</tt>: <a href="../Baha'i/Baha/TOB/p001-270TOB.html#para582">211</a>}<br>
 					</blockquote>
 				40:34, {<tt>KI</tt>: <a href="../Baha'i/Baha/KI/p095-258.html#para134">213</a>}<br>
 				</blockquote>
@@ -18184,9 +18193,10 @@ Security,
 	<blockquote>
 	{<tt>GL</tt>: <a href= "../Baha'i/Baha/GL/p003-346.html#p331">331</a>}<br>
 	{<tt>KA</tt>: <a href="../Baha'i/Baha/KA/p012-018Desc.html#p16">16</a>, <a href= "../Baha'i/Baha/KA/p019-088Aqdas.html#para2">K2</a>, <a href= "../Baha'i/Baha/KA/p103-140QA.html#qa58">Q58</a>}<br>
-	collective security<a name="security,collective"></a>, 
+	collective security<a name="security,collective"></a>,
 		<blockquote>
-		{<tt>GPB</tt>: <a href= "../Baha'i/SE/GPB/p087-234SecondPeriod.html#p217">217</a>}<br>
+        {<tt>GL</tt>: <a href="../Baha'i/Baha/GL/p003-346.html#CXVII">CXVII</a>}<br>
+        {<tt>GPB</tt>: <a href= "../Baha'i/SE/GPB/p087-234SecondPeriod.html#p217">217</a>}<br>
 		{<tt>KA</tt>: <a href= "../Baha'i/Baha/KA/p165-251Notes.html#note173">n173</a>}<br>
 		</blockquote>
 	</blockquote>
