--- a/Baha'i/AB/SAQ/Contents.html
+++ b/Baha'i/AB/SAQ/Contents.html
@@ -958,7 +958,7 @@ MISCELLANEOUS SUBJECTS
 			<span class="text-span">The Necessity of Following the Teachings of the Divine Manifestations</span>
 		</div>
 	   </td>
-       <td><div align="right"><a href="p261-306Part5.html#P300">300</a></div></td>
+       <td><div align="right"><a href="p261-306Part5.html#p300">300</a></div></td>
 </tr>
 <tr>
        <td></td>
