--- a/Baha'i/AB/SAQ/p307-324Index.html
+++ b/Baha'i/AB/SAQ/p307-324Index.html
@@ -1270,7 +1270,7 @@ Word<br>
 		</blockquote>
 	</blockquote>
 World. <i>See</i> <a href="#Earth">Earth</a><br>
-Zaqqúm, tree of, <a href= "../SAQ/#p285">285</a>, 285n<br>
+Zaqqúm, tree of, <a href= "../SAQ/p261-306Part5.html#p285">285</a>, 285n<br>
 Zodiac, Sun of Reality rises from various signs of, <a href= "../SAQ/p001-080Part1.html#p76">76</a><br>
 Zoroastrianism, <a href= "../SAQ/p001-080Part1.html#p39">39</a><br>
 
