--- a/Baha'i/Baha/EW/p001-182.html
+++ b/Baha'i/Baha/EW/p001-182.html
@@ -1170,7 +1170,7 @@ Me. In the Tablet, addressed to His Majesty the Sháh--may God, blessed and glor
 	<td VALIGN=top><small>
 	<hr>
 	["O Shaykh! Every time God..."] <i>The Revelation of Bahá'u'lláh</i>, vol. 4, <a href="../../Others/ROB/V4/p391-412Ch25.html#p410">p. 410</a>.<p>
-	<i>'A highly accomplished...man.'</i> This is Hájí Mírzá Siyyid Hasan, the Afnán-i-Kabír, see vol.4 , p. <a href="p391-412Ch25.html#p404">404</a>-6. (<i>The Revelation of Bahá'u'lláh</i> vol. 4, <a href="../../Others/ROB/V4/p432-440Apndx_III.html#68a">Appendix III</a>)
+	<i>'A highly accomplished...man.'</i> This is Hájí Mírzá Siyyid Hasan, the Afnán-i-Kabír, see vol.4 , p. <a href="../../Others/ROB/V4/p391-412Ch25.html#p404">404</a>-6. (<i>The Revelation of Bahá'u'lláh</i> vol. 4, <a href="../../Others/ROB/V4/p432-440Apndx_III.html#68a">Appendix III</a>)
 	</small></td>
 	<td VALIGN=bottom><small><center><DIV TITLE="Page number location is approximate">68</DIV></center></small></td>
 </tr>
