--- a/Baha'i/Baha/KA/p165-251Notes.html
+++ b/Baha'i/Baha/KA/p165-251Notes.html
@@ -1078,7 +1078,7 @@ Note 108 - fixed quote from God Passes By (remove 'as')
 	  <hr>
 	  [CLUI:<br>
 	  <a href="../../../CLUI/UnifiedIndex.html#HouseofJustice">House of Justice</a>,<br>
-  	  <a href="../../../CLUI/UnifiedIndex.html#adultery ">Crime(s)</a><br>
+  	  <a href="../../../CLUI/UnifiedIndex.html#Adultery">Crime(s)</a><br>
 	  ]
 	  </small></td>
 	  <td>&nbsp;</td>
@@ -1093,7 +1093,7 @@ Note 108 - fixed quote from God Passes By (remove 'as')
 	  <hr>
 	  [CLUI:<br>
 	  <a href="../../../CLUI/UnifiedIndex.html#GoldMithqál">Mithqál</a>,<br>
-  	  <a href="../../../CLUI/UnifiedIndex.html#adultery ">Crime(s)</a><br>  
+  	  <a href="../../../CLUI/UnifiedIndex.html#Adultery">Crime(s)</a><br>
 	  ]
 	  </small></td>
 	  <td VALIGN=middle><small><center><DIV TITLE="Page number location is approximate">201</DIV></center><p></small></td>
@@ -1789,7 +1789,7 @@ Note 108 - fixed quote from God Passes By (remove 'as')
 	  <b><a name="note130"/>130. Whoso interpreteth what hath been sent down from the heaven of Revelation, and altereth its evident meaning <a href="p019-088Aqdas.html#para105">&para;105</a></b><p>
 	  In several of His Tablets, Bahá'u'lláh affirms the distinction between allegorical verses, which are susceptible to interpretation, and those verses that relate to such subjects as the laws and ordinances, worship and religious observances, whose meanings are evident and which demand compliance on the part of the believers.<p>
 	  As explained in notes <a href="p165-251Notes.html#note145">145</a> and <a href="p165-251Notes.html#note184">184</a>, Bahá'u'lláh designated 'Abdu'l-Bahá, His eldest Son, as His Successor and the Interpreter of His Teachings. 'Abdu'l-Bahá in His turn appointed His eldest grandson, Shoghi Effendi, to succeed Him as interpreter of the holy Writ and Guardian of the Cause. The interpretations of 'Abdu'l-Bahá and Shoghi Effendi are considered divinely guided and are binding on the Bahá'ís.<p>
-	  The existence of authoritative interpretations does not preclude the individual from engaging in the study of the Teachings and thereby arriving at a personal interpretation or understanding. A clear distinction is, however, drawn in the Bahá'í Writings between authoritative interpretation and the understanding that each individual arrives at from a study of its Teachings. Individual interpretations based on a person's understanding of the Teachings constitute the fruit of man's rational power and may well contribute to a greater comprehension of the Faith. Such views, nevertheless, lack authority. In presenting their personal ideas, individuals are cautioned not to discard the authority of the revealed words, not to deny or contend with the authoritative interpretation, and not to engage in controversy; rather they should <a name="p221"/> offer their thoughts as a contribution to knowledge, making it clear that their views are merely their own.<p>
+	  The existence of authoritative interpretations does not preclude the individual from engaging in the study of the Teachings and thereby arriving at a personal interpretation or understanding. A clear distinction is, however, drawn in the Bahá'í Writings between authoritative interpretation and the understanding that each individual arrives at from a study of its Teachings. Individual interpretations based on a person's understanding of the Teachings constitute the fruit of man's rational power and may well contribute to a greater comprehension of the Faith. Such views, nevertheless, lack authority. In presenting their personal ideas, individuals are cautioned not to discard the authority of the revealed words, not to deny or contend with the authoritative interpretation, and not to engage in controversy; rather they should <a name="p222"/> offer their thoughts as a contribution to knowledge, making it clear that their views are merely their own.<p>
 	  </td>
 	  <td VALIGN=TOP>
 	  <small><hr>
