--- a/Baha'i/Baha/PM/p003-340.html
+++ b/Baha'i/Baha/PM/p003-340.html
@@ -3857,7 +3857,7 @@
 	<td VALIGN=top>&nbsp;</td>
 </tr>
 <tr>
-	<td><a name="para421"></a><a name="p135">
+	<td><a name="para421"></a><a name="p135"/>
 	<br><center><h2><a name="LXXXI"/><span style="background-color: #ffffCC" TITLE="Section 81 - Index Entries: Bahá'u'lláh-mission of, God-bounteousness of, God-hears prayers, God-justice of, God-mercy of, God-Peerless (no partner), God-Wrath of, Justice of God, Mercy, Power-of God, Prayers for-all mankind, Prayers for-recognition of Manifestation, Tribulations-bounties of God, Tribulations-welcomed, Wrath of God">LXXXI</span></h2></center> 
 	</td>
 	<td VALIGN=top><small>
@@ -7750,7 +7750,7 @@
 	<td VALIGN=top>&nbsp;</td>
 </tr>
 <tr>
-	<td><a name="para68"></a>
+	<td><a name="para849"></a>
 	<center><i>
 	<blockquote>Let him, then, repeat six times the greeting</i> "Alláh-u-Abhá", <i>and then repeat nineteen times each of the following verses:</blockquote>
 	</i></center>
@@ -7762,13 +7762,13 @@
 	<td VALIGN=top rowspan="2">&nbsp;</td>
 </tr>
 <tr>
-	<td><a name="para69"></a>
+	<td><a name="par850"></a>
 	<blockquote><blockquote>
 	We all, verily, worship God.<br>
 	We all, verily, bow down before God.<br>
 	We all, verily, are devoted unto God.<br>
 	We all, verily, give praise unto God.<br>
-	<a name="p102"></a>We all, verily, yield thanks unto God.<br>
+	We all, verily, yield thanks unto God.<br>
 	We all, verily, are patient in God.
 	</blockquote></blockquote>		
 	</td>
@@ -9004,7 +9004,7 @@
    	<hr>
 	[CLUI:<br>
 	<a href="../../../CLUI/UnifiedIndex.html#PrayersObligatory">Obligatory Prayers</a>,<br>
-	<a href="../../../CLUI/UnifiedIndex.html#Qiblih ">Qiblih</a><br>
+	<a href="../../../CLUI/UnifiedIndex.html#Qiblih">Qiblih</a><br>
 	]<p>
 	["Perform ye . . . ablutions for the Obligatory Prayer..."] <i>The Kitáb-i-Aqdas</i>, <a href="../KA/p165-251Notes.html#note34">Note 34</a>
 	</small></td>
@@ -9080,7 +9080,7 @@
 	</td>
 	<td VALIGN=top><small>
    	<hr>
-	[CLUI: <a href="../../../CLUI/UnifiedIndex.html#Qiblih ">Qiblih</a>]
+	[CLUI: <a href="../../../CLUI/UnifiedIndex.html#Qiblih">Qiblih</a>]
 	</td>
 	<td VALIGN=top><small><center><DIV TITLE="Page number location is approximate">315</DIV></center><p></small></td>
 </tr>
@@ -9163,7 +9163,7 @@
 	</td>
 	<td VALIGN=top><small>
    	<hr>
-	[CLUI:	<a href="../../../CLUI/UnifiedIndex.html#Qiblih ">Qiblih</a>]
+	[CLUI:	<a href="../../../CLUI/UnifiedIndex.html#Qiblih">Qiblih</a>]
 	</small></td>
 	<td VALIGN=top>&nbsp;</td>
 </tr>
