--- a/Baha'i/Baha/TOB/Preface.html
+++ b/Baha'i/Baha/TOB/Preface.html
@@ -56,7 +56,7 @@
 	<td VALIGN=top>&nbsp;</td>
 </tr>
 <tr>
-	<td><a name="para3"></a>
+	<td><a name="para3"></a><a name="pvi"/>
 	Six of the Tablets referred to in the above passage and which are included in this volume, were, on the instructions of 'Abdu'l-Bahá, translated into English and published, in 1917, by Bahá'í Publishing Society, Chicago. That volume has long been out of print and its contents are now known to most Bahá'ís only through excerpts printed in compilations or quoted in other writings. Moreover, as Shoghi Effendi's translations of the Sacred Text increasingly flowed from his pen, it became apparent that the earlier translations could well be improved, both in accuracy and style. The Universal House of Justice therefore commissioned this volume, which it describes as yet one more attempt to render into adequate English Bahá'u'lláh's matchless utterance. Wherever any portion of the text had already been translated by the Guardian, that translation has been used. These passages are identified by the <a href="p271-276Notes.html">Notes</a> at the end of the book.
 	</td>
 	<td VALIGN=top><small>
@@ -65,7 +65,7 @@
 	<td VALIGN=middle><small><center><DIV TITLE="Page number location is approximate">vi</DIV></center><p></small></td>
 </tr>
 <tr>
-	<td><a name="para4"></a>
+	<td><a name="para4"></a></a><a name="pvii"/> 
 	<br><br><br><br><br>
 	<center><b>References to the Qur'án</b></center><p>
 	In footnotes referring to the Qur'án the súrihs have been numbered according to the original, whereas the verse numbers are those in Rodwell's translation which differ sometimes from those of the Arabic.
