--- a/Baha'i/Baha/HiddenWords.html
+++ b/Baha'i/Baha/HiddenWords.html
@@ -695,7 +695,7 @@
 
 
 <tr>
-       <td colspan="3"><a name="persian">
+       <td colspan="3"><a name="persian"/>
 	   <br><br>
 	   <h3><center><i>Part II.--From the Persian</i></a></center></h3>
 	   <p>
