--- a/Baha'i/Baha/TSVATFV.html
+++ b/Baha'i/Baha/TSVATFV.html
@@ -73,7 +73,7 @@
 			<span class="text-span">PREFACE</span>
 			</div>
 			</td>
-			<td><small><div align="right"><a href="#vii">vii</a></div></small></td>
+			<td><small><div align="right"><a href="#pvii">vii</a></div></small></td>
 		</tr>
 		<tr>
 			<td colspan="2">
@@ -241,7 +241,7 @@
 </tr>
 <tr>
        <td><a name="para4"></a>
-	   The years following the Báb's Declaration were filled with turmoil. In a single year, the ferociously fanatical and ignorant Persian Muslims murdered 4,000 adherents of His Cause. The first to <a name="pvii"/> believe in Him was shot from ambush; His greatest disciple, Quddús, was torn to pieces in the public square of Bárfurúsh (Babul). Tahirih, the most outstanding Bábí woman, bravely and defiantly cried out to her captors, "You can kill me as soon as you like but you cannot stop the emancipation of women."
+	   The years following the Báb's Declaration were filled with turmoil. In a single year, the ferociously fanatical and ignorant Persian Muslims murdered 4,000 adherents of His Cause. The first to <a name="pviii"/> believe in Him was shot from ambush; His greatest disciple, Quddús, was torn to pieces in the public square of Bárfurúsh (Babul). Tahirih, the most outstanding Bábí woman, bravely and defiantly cried out to her captors, "You can kill me as soon as you like but you cannot stop the emancipation of women."
 	   </td>
 	   <td VALIGN=top>
 	   <small>
@@ -253,7 +253,7 @@
 	   ]
 	   </small>
 	   </td>
-       <td VALIGN=middle><small><center><a name="pviii">viii</a></center><p>
+       <td VALIGN=middle><small><center>viii</center><p>
 	   </small>
 	   </td>
 </tr>
@@ -299,7 +299,7 @@
 </tr>
 <tr>
        <td><a name="para8"></a>
-	   Husayn 'Ali was of a noble, respected, and wealthy family. A career in government service<a name="pviii"/> was open to Him, but He was not interested in politics. His kingdom was not of this world. Turning His back on a life of luxury, He early championed the Cause of the Báb. He knew that this action would lead to privation, suffering, and persecution for Himself and His loved ones. The blow fell in August 1852 when He was incarcerated in the Black Pit of the capital of Persia. In this underground dungeon, He was surrounded by thieves and murderers. Heavy chains and fetters cut into His flesh. Amidst the horror, agony, and gloom of this place, the Revelation of Bahá'u'lláh was born. The "Most Great Spirit" appeared to Him in a dream, and on every side were heard these words: <i>"Verily, we shall render Thee victorious by Thyself and by Thy pen. Grieve Thou not for that which hath befallen Thee, neither be Thou afraid, for Thou art in safety. Erelong will God raise up the treasures of the earth—men who will aid Thee through Thyself and through Thy name, wherewith God hath revived the hearts of such as have recognized Him."</i>
+	   Husayn 'Ali was of a noble, respected, and wealthy family. A career in government service<a name="pix"/> was open to Him, but He was not interested in politics. His kingdom was not of this world. Turning His back on a life of luxury, He early championed the Cause of the Báb. He knew that this action would lead to privation, suffering, and persecution for Himself and His loved ones. The blow fell in August 1852 when He was incarcerated in the Black Pit of the capital of Persia. In this underground dungeon, He was surrounded by thieves and murderers. Heavy chains and fetters cut into His flesh. Amidst the horror, agony, and gloom of this place, the Revelation of Bahá'u'lláh was born. The "Most Great Spirit" appeared to Him in a dream, and on every side were heard these words: <i>"Verily, we shall render Thee victorious by Thyself and by Thy pen. Grieve Thou not for that which hath befallen Thee, neither be Thou afraid, for Thou art in safety. Erelong will God raise up the treasures of the earth—men who will aid Thee through Thyself and through Thy name, wherewith God hath revived the hearts of such as have recognized Him."</i>
 	   </td>
 	   <td VALIGN=top>
 	   <small>
@@ -307,7 +307,7 @@
 	   [CLUI: <a href="../../CLUI/UnifiedIndex.html#Síyáh-Chál,dungeonof">dungeon of Síyáh-Chál</a>]
 	   </small>
 	   </td>
-       <td VALIGN=top><small><center><a name="pix">ix</a></center><p>
+       <td VALIGN=top><small><center>ix</center><p>
 	   </small>
 	   </td>
 </tr>
@@ -321,7 +321,7 @@
 	   [CLUI: <a href="../../CLUI/UnifiedIndex.html#Baghdád">Baghdád</a>]
 	   </small>
 	   </td>
-       <td VALIGN=bottom><small><center><a name="px">x</a></center><p>
+       <td VALIGN=bottom><small><center>x</center><p>
 	   </small>
 	   </td>
 </tr>
@@ -358,7 +358,7 @@
 	   <small>
 	   <hr>
 	   [CLUI: <br>
-	   <a href="../../CLUI/UnifiedIndex.html#Constantinople ">Constantinople</a>, <br>
+	   <a href="../../CLUI/UnifiedIndex.html#Constantinople">Constantinople</a>, <br>
 	   <a href="../../CLUI/UnifiedIndex.html#Adrianople">Adrianople</a><br>
 	   <a href="../../CLUI/UnifiedIndex.html#Súriy-i-Mulúk"><i>Súriy-i-Mulúk</i></a><br>
 	   ]
@@ -377,7 +377,7 @@
 	   <a href="KA/Cover.html"><i>The Kitab-i-Aqdas</i></a>
 	   </small>
 	   </td>
-       <td VALIGN=middle><small><center><a name="pxi">xi</a></center><p>
+       <td VALIGN=middle><small><center>xi</center><p>
 	   </small>
 	   </td>
 </tr>
@@ -395,7 +395,7 @@
 	   ]
 	   </small>
 	   </td>
-       <td VALIGN=middle><small><center><a name="pxii">xii</a></center><p>
+       <td VALIGN=middle><small><center>xii</center><p>
 	   </small>
 	   </td>
 </tr>
@@ -412,7 +412,7 @@
        <td></td>
 </tr>
 <tr>
-       <td><a name="para15"></a>
+       <td><a name="para15a"></a>
 	   <i>The Four Valleys</i>, an epistle written in Baghdad<a name="pxiii"/> after the composition of <i>The Seven Valleys</i>, was addressed to the learned Shaykh 'Abdu'r-Rahmán of Karkúk, a city of 'Iraqi Kurdistán. It sets forth four ways in which the Unseen is seen, the four stages of the human heart, and the four kinds of mystic wayfarers in quest of the Intended One, the Praiseworthy One, the Attracting One, the Beloved. The four divine states are given in this verse from the Qur'án (57:3): "He is the first and the last; the Seen and the Hidden; and He knoweth all things."<p>
 	   <div align="right">-ROBERT L. GULICK, JR.<br>
 	   February 1, 1975</div>
@@ -423,7 +423,7 @@
 	   [CLUI: <a href="../../CLUI/UnifiedIndex.html#Shaykh'Abdu'r-Rahmán-i-Karkúkí">Shaykh 'Abdu'r-Rahmán-i-Karkúkí</a>]
 	   </small>
 	   </td>
-       <td VALIGN=top><small><center><a name="pxiii">xiii</a></center><p>
+       <td VALIGN=top><small><center>xiii</center><p>
 	   </small>
 	   </td>
 </tr>
