--- a/Baha'i/Comp/BP/PrayerForTheDead.html
+++ b/Baha'i/Comp/BP/PrayerForTheDead.html
@@ -27,7 +27,7 @@
 	<td style='border:none;'></td>
 </tr>
 <tr>
-	<td width="77%"><a name="para1"/>
+	<td width="77%"><a name="para2"/>
 	<center><h2><i>(Female)</i></h2></center>
 	O my God!  This is Thy handmaiden and the daughter of Thy handmaiden who hath believed in Thee and in Thy signs, and set her face towards Thee, wholly detached from all except Thee.  Thou art, verily, of those who show mercy the most merciful.<p>
 	Deal with her, O Thou Who forgivest the sins of men and concealest their faults, as beseemeth the heaven of Thy bounty and the ocean of Thy grace.  Grant her admission within the precincts of Thy transcendent mercy that was before the foundation of earth and heaven.  There is no God but Thee, the Ever-Forgiving, the Most Generous.
@@ -37,7 +37,7 @@
 	<td style='border:none;'></td>
 </tr>
 <tr>
-	<td width="77%"><a name="para1"/>
+	<td width="77%"><a name="para3"/>
 	<center><h2><i>(Male)</i></h2></center>
 	O my God!  This is Thy servant and the son of Thy servant who hath believed in Thee and in Thy signs, and set his face towards Thee, wholly detached from all except Thee.  Thou art, verily, of those who show mercy the most merciful.<p>
 	Deal with him, O Thou Who forgivest the sins of men and concealest their faults, as beseemeth the heaven of Thy bounty and the ocean of Thy grace.  Grant him admission within the precincts of Thy transcendent mercy that was before the foundation of earth and heaven.  There is no God but Thee, the Ever-Forgiving, the Most Generous.
@@ -47,7 +47,7 @@
 	<td style='border:none;'></td>
 </tr>
 <tr>
-	<td><a name="para"></a>
+	<td><a name="para4"></a>
 	<b>Alláh-u-Abhá,</b><p>
 	<i>1.</i>  We all, verily, worship God.<br>
 	<i>2.</i>  We all, verily, worship God.<br>
@@ -71,7 +71,7 @@
 	</td>
 </tr>
 <tr>
-	<td><a name="para"></a>
+	<td><a name="para5"></a>
 	<b>Alláh-u-Abhá,</b><p>
 	<i>1.</i>  We all, verily, bow down before God.<br>
 	<i>2.</i>  We all, verily, bow down before God.<br>
@@ -95,7 +95,7 @@
 	</td>
 </tr>
 <tr>
-	<td><a name="para"></a>
+	<td><a name="para6"></a>
 	<b>Alláh-u-Abhá,</b><p>
 	<i>1.</i>  We all, verily, are devoted unto God.<br>
 	<i>2.</i>  We all, verily, are devoted unto God.<br>
@@ -119,7 +119,7 @@
 	</td>
 </tr>
 <tr>
-	<td><a name="para"></a>
+	<td><a name="para7"></a>
 	<b>Alláh-u-Abhá,</b><p>
 	<i>1.</i>  We all, verily, give praise unto God.<br>
 	<i>2.</i>  We all, verily, give praise unto God.<br>
@@ -143,7 +143,7 @@
 	</td>
 </tr>
 <tr>
-	<td><a name="para"></a>
+	<td><a name="para8"></a>
 	<b>Alláh-u-Abhá,</b><p>
 	<i>1.</i>  We all, verily, yield thanks unto God.<br>
 	<i>2.</i>  We all, verily, yield thanks unto God.<br>
@@ -167,7 +167,7 @@
 	</td>
 </tr>
 <tr>
-	<td><a name="para"></a>
+	<td><a name="para9"></a>
 	<b>Alláh-u-Abhá,</b><p>
 	<i>1.</i>  We all, verily, are patient in God.<br>
 	<i>2.</i>  We all, verily, are patient in God.<br>
