--- a/Baha'i/Others/DBNN/BabsAutographTablets.html
+++ b/Baha'i/Others/DBNN/BabsAutographTablets.html
@@ -288,7 +288,7 @@
 	<td VALIGN=top><small>
 	<hr>
 	<i>Fifteenth Letter of the Living:</i> Mírzá Hádí-i-Qazvíní (Son of Mullá 'Abdu'l-Vahháb-i-Qazvíní)<p>
-	<i>Gleanings from the Writings of Bahá'u'lláh</i>, <a href="../../Baha/GL/p003-346.html#lxxiii">lxxiii</a>, <a href="../../Baha/GL/p003-346.html#lxxxiii">lxxxiii</a>, <a href="../../Baha/GL/p003-346.html#cxxiv">cxxiv</a>.<p>
+	<i>Gleanings from the Writings of Bahá'u'lláh</i>, <a href="../../Baha/GL/p003-346.html#LXXIII">lxxiii</a>, <a href="../../Baha/GL/p003-346.html#LXXXIII">lxxxiii</a>, <a href="../../Baha/GL/p003-346.html#CXXIV">cxxiv</a>.<p>
 	["This last statement..."] <i>The Revelation of Bahá'u'lláh</i> vol. 2 <a href="../ROB/V2/p137-151Ch06.html#p144">p. 144</a><p>
 	["In this life..."] <i>The Revelation of Bahá'u'lláh</i> vol. 3 <a href="../ROB/V3/p052-072Ch03.html#p63">p. 63</a>
 	</small></td>
