--- a/Baha'i/Others/DBNN/Contents.html
+++ b/Baha'i/Others/DBNN/Contents.html
@@ -4267,7 +4267,7 @@ changed Kalantar to Kalántar
        		<span class="text-span">INDEX</span>
        </div>
 	   </td>
-       <td><small><div align="right"><a href= "../DBNN/p679-685Index.html#p679">679</a></div></small></td>
+       <td><small><div align="right"><a href= "../DBNN/p679-685Index.html">679</a></div></small></td>
 </tr>
 </table>
 
