--- a/Baha'i/Others/DBNN/p047-096Ch03.html
+++ b/Baha'i/Others/DBNN/p047-096Ch03.html
@@ -455,7 +455,7 @@ changed muadhdhín to mu'adhdhín to match glossary
 	<td rowspan="3"><a name="para31"></a>
 	The Báb, whose name was Siyyid 'Alí-Muhammad, <sup><small>17</small></sup> was born in the city of Shíráz, on the first day of Muharram, in the year 1235 A.H. <sup><small>18</small></sup> He belonged to a house which was renowned for its nobility and which traced its origin to Muhammad Himself. The date of His birth confirmed the truth of the prophecy traditionally attributed to the Imám 'Alí: "I am two years younger than my Lord." Twenty-five years, four months, and four days had elapsed since the day of His birth, when he declared His Mission. In His early childhood He lost His father, Siyyid Muhammad-Ridá, <sup><small>19</small></sup> a man who was known throughout the province of Fárs for his piety and virtue, and was held in high esteem and honour.<p>
 		
-	<a name="p73">
+	<a name="p73"/>
 	<center>
 	<table>
 	<tr>
@@ -468,7 +468,7 @@ changed muadhdhín to mu'adhdhín to match glossary
 	</center>
 	<p>
 	
-	<a name="p74">
+	<a name="p74"/>
 	
 	<center>
 	<table>
