--- a/Baha'i/Others/DBNN/p669-673Appendix.html
+++ b/Baha'i/Others/DBNN/p669-673Appendix.html
@@ -16,7 +16,7 @@
        <td>
 	   	   <FORM ACTION="p651-668Epilogue.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="<" NAME=back>
-		   </FORM>	   
+		   </FORM>
 	   </td>
        <td>
 	   	   <FORM ACTION="Contents.html" METHOD=GET>
@@ -37,7 +37,7 @@
 
 <table border="1" cellspacing="2" cellpadding="5" bgcolor="" width="100%">
 <tr>
-	<td width="77%"><a name="para1"/><a name=<"p669"/>
+	<td width="77%"><a name="para1"/><a name="p669"/>
 	<center>
 	<h1>APPENDIX</h1>
 	<br>
